# diplom_petstore_api_project_belevtseva

./: .gitignore  README.md  pyproject.toml  pytest.ini
api/: client.py  schemas.py
tests/: conftest.py  test_data.py  test_detele_user.py  test_get_user.py  test_post_user.py  test_put_user.py
