[project]
name = "diplom-petstore-api-project-belevtseva"
version = "0.1.0"
description = ""
authors = [
    {name = "Darya Belevtseva",email = "dascha067@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (==2.32.3)",
    "pytest (==8.3.5)",
    "pydantic (==2.11.5)",
    "pydantic-core (==2.33.2)",
    "email-validator (==2.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
